fix: moved the Go-to button to the right - aligned it with the paginator

--- a/src/app/images-collection/images-collection-detail/images-collection-detail.component.css
+++ b/src/app/images-collection/images-collection-detail/images-collection-detail.component.css
@@ -25,7 +25,6 @@
 }
 
 .goToSpan {
-  bottom: 17px;
   color: rgba(0, 0, 0, 0.54);
   font-family: Roboto, Helvetica Neue, sans-serif;
   font-size: 12px;
